--- a/materiais.html
+++ b/materiais.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materiais</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Materiais</h1>
