usando float e clear nas imagens

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="code-img" src="https://media.giphy.com/media/fAnzw6YK33jMwzp5wp/giphy.gif" alt="escrevendo código" />
             <figcaption>
                 <h3>Desenvolvedor Full Stack</h3>
-                <p>Meus primeiros passos na tecnologia foi em 2006, quando ganhei meu primeiro computador, entrei na faculdade em 2015 e desde então não parei mais.</p>
+                <p class="description-img"> Meus primeiros passos na tecnologia foi em 2006, quando ganhei meu primeiro computador, entrei na faculdade em 2015 e desde então não parei mais.</p>
             </figcaption>
         </figure>
         
@@ -47,7 +47,7 @@
     
            <figcaption>
             <h3>Sou um cara muito fazedor</h3>
-            <p>Sempre enfrentei muitos desafios na minha vida, então aprendi a ser proativo sempre, e sempre fazer antes de tudo e todos.</p>
+            <p class="description2-img">Sempre enfrentei muitos desafios na minha vida, então aprendi a ser proativo sempre, e sempre fazer antes de tudo e todos.</p>
 
            </figcaption>
         </figure>
