ajuste de btn footer e finalizando site do curso tipscode

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sacramento&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
    </head>
 <body>
 <header class="top-container">
@@ -19,7 +20,7 @@
     <img src="img/tech.png" alt="">
 </header>
 
-< <main class="middle-container">
+<main class="middle-container">
 
     <div class="profile">
         <figure>
@@ -58,6 +59,8 @@
         <h3>Estarei a sua disposição para lhe melhor atender.</h3>
         <p class="contact-message">Mande uma mensagem relatando o que você deseja que em no máximo 48h irei responder seu e-mail!</p>
         <a class="btn" href="mailto:suporte@tipscode.com.br">Entre em contato</a>
+        
+        
     </div>
 </main>
 <footer class="bottom-container">
@@ -66,5 +69,5 @@
     <a class="footer-link" href="https://www.instragram.com/tipscodeoficial">Instagram</a>
     <p class="copyright">© 2021 Alisson Suassuna @ TipsCode.</p>
 </footer>    
-      </body>
+ </body>
 </html>
